# tree-sitter-oz

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-oz.pc.in
bindings/c/tree_sitter/: tree-sitter-oz.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_oz/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOzTests/: TreeSitterOzTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  statements.txt
