[package]
name = "tree-sitter-oz"
description = "A tree-sitter parser for the Oz programming language."
version = "0.1.0"
authors = ["Cynthia Allen <cynthiaallen228@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "oz"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/scrmbld/tree-sitter-oz"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
